<resources>
    <string name="app_name">Gaganyatri</string>
    <string name="gaganyatri">GaganYatri</string>
    <string name="travel_with">Travel with Purpose.</string>
    <string name="be_the_comp">Be the Compass in Your Journey, Guide Hope to New Horizons</string>
    <string name="enter_your_mobile_number">Enter Your Mobile Number</string>
    <string name="or">OR</string>
    <string name="enter_otp_to_verify">Enter OTP to Verify</string>
    <string name="x">X</string>
    <string name="resend_otp_in_59_sec">Resend OTP in 59 sec</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hey_parth">Hey!👋 Traveller</string>
    <string name="hope_you_ar">Hope you are having a great day</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="blog">Blog</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="parth_jamkhedkar">Parth Jamkhedkar</string>
    <string name="some_id">+919975108964</string>
    <string name="edit">Edit</string>
    <string name="general">General</string>
    <string name="add_co_travellers">Co Travellers</string>
    <string name="change_language">Change Language</string>
    <string name="app_settings">App Settings</string>
    <string name="ui_mode">UI Mode</string>
    <string name="travel_settings">Travel Settings</string>
    <string name="app_version">App Version</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="logout">Logout</string>
    <string name="my_travel_history">My Travel History</string>
    <string name="search_by_city_or_date">Search by City or Date</string>
    <string name="plan_you_first_journey_with_us">Plan you first journey with us.</string>
    <string name="trip_to_hyderabad">Trip to Hyderabad</string>
    <string name="feb_19_2025_to_feb_22_2025">Feb 19, 2025 to Feb 22, 2025</string>
    <string name="solo">Solo</string>
    <string name="blogs_amp_articles"><![CDATA[Blogs & Articles]]></string>
    <string name="search_for_articles_blogs_etc">Search for Articles,Blogs, etc</string>
    <string name="my_hyderabad_trip_sepcial_thanks_to_gaganyatris">My Hyderabad Trip: Sepcial Thanks to GaganYatris.</string>
    <string name="feb_23_2025">Feb 23, 2025</string>
    <string name="city_hyderabad">City: HYDERABAD</string>
    <string name="be_first_to_write_an_article_here">Be First to Write an Article here</string>
    <string name="co_travellers">Co Travellers</string>
    <string name="ppj8988_gmail_com">ppj8988@gmail.com</string>
    <string name="help_amp_support"><![CDATA[Help & Support]]></string>
    <string name="upcoming_trips">Upcoming Trips</string>
    <string name="plan_your_trip">Plan your trip</string>
    <string name="select_a_language">Select a Language</string>
    <string name="english">English</string>
    <string name="hindi">हिन्दी</string>
    <string name="marathi">मराठी</string>
    <string name="save_changes">Save Changes</string>
    <string name="change_ui_mode">Change UI Mode</string>
    <string name="select_a_ui_mode">Select a UI Mode</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="reminders">Reminders</string>
    <string name="remind_me_in_every">Remind me in Every</string>
    <string name="awb_pf1"><b>AWB</b> PF1</string>
    <string name="lpi_pf1"><b>LPI</b> PF5</string>
    <string name="explore_your_location">EXPLORE YOUR\nLOCATION</string>
    <string name="search_information_br_with_your_photo">Search Information\nwith Your Photo</string>
</resources>