<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="1dp"
        android:paddingBottom="27sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/hey_parth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="36dp"
            android:gravity="top"
            android:text="@string/hey_parth"
            android:textAppearance="@style/hey_parth"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/hope_you_ar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:text="@string/hope_you_ar"
            android:textAppearance="@style/hope_you_ar"
            app:layout_constraintStart_toStartOf="@+id/hey_parth"
            app:layout_constraintTop_toBottomOf="@+id/hey_parth" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="100dp"
            app:layout_constraintBottom_toBottomOf="@+id/hope_you_ar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/hey_parth"
            app:layout_constraintVertical_bias="0.444"
            app:srcCompat="@drawable/search_icon" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView6"
            app:layout_constraintStart_toEndOf="@+id/imageView6"
            app:layout_constraintTop_toTopOf="@+id/imageView6"
            app:srcCompat="@drawable/scanner_img" />

    </androidx.constraintlayout.widget.ConstraintLayout>



    <LinearLayout
        android:id="@+id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="31sp"
        android:paddingVertical="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/nav_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="68dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/HomeIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/home" />

            <TextView
                android:id="@+id/HomeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home"
                android:layout_marginTop="4dp"
                android:textAppearance="@style/home" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/nav_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="68dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/HistoryIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/history" />

            <TextView
                android:id="@+id/HistoryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/history"
                android:layout_marginTop="4dp"
                android:textAppearance="@style/home" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/nav_blog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="68dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/BlogIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/blog" />

            <TextView
                android:id="@+id/BlogText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blog"
                android:layout_marginTop="4dp"
                android:textAppearance="@style/home" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/nav_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/SettingsIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/settings" />

            <TextView
                android:id="@+id/SettingsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:layout_marginTop="4dp"
                android:textAppearance="@style/home" />
        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_nav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>