<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".OnBoardingActivity">



    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="150sp"
        android:background="@color/primaryColor"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/gaganyatri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:gravity="top"
        android:text="@string/gaganyatri"
        android:textAppearance="@style/gaganyatri"
        app:layout_constraintStart_toEndOf="@+id/logo"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="50dp"
        android:layout_height="79.65dp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.212"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/travel_with"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:text="@string/travel_with"
        android:textAppearance="@style/travel_with"
        app:layout_constraintStart_toStartOf="@+id/gaganyatri"
        app:layout_constraintTop_toBottomOf="@+id/gaganyatri" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:srcCompat="@drawable/on_boarding_img" />

    <TextView
        android:id="@+id/be_the_comp"
        android:layout_width="274dp"
        android:layout_height="42dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:gravity="center_horizontal|top"
        android:text="@string/be_the_comp"
        android:textAppearance="@style/be_the_comp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <LinearLayout
        android:id="@+id/mobile_number_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/be_the_comp"
        android:orientation="horizontal"
        android:gravity="center">

        <com.hbb20.CountryCodePicker
            app:ccp_defaultNameCode="IND"
            android:id="@+id/country_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:ccp_textSize="14sp"
            android:layout_marginStart="30dp"
            app:ccp_autoDetectCountry="true"
            app:ccp_showFlag="true"
            app:ccp_showNameCode="false"
            app:ccp_showPhoneCode="false"
            app:ccp_showFullName="false">
        </com.hbb20.CountryCodePicker>

        <EditText
            android:id="@+id/phoneNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/edit_text_rounded_corner"
            android:hint="@string/enter_your_mobile_number"
            android:padding="15dp"
            android:inputType="phone"
            android:textColorHint="#3D000000"
            android:textSize="14sp"
             />
    </LinearLayout>



    <ImageButton
        android:id="@+id/next_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:src="@drawable/next_btn"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mobile_number_form" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/next_btn"
        app:srcCompat="@drawable/line_2" />

    <TextView
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:paddingHorizontal="5sp"
        android:text="@string/or"
        android:textAppearance="@style/or"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView4" />

    <ImageView
        android:id="@+id/google_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:srcCompat="@drawable/continue_with_google" />

</androidx.constraintlayout.widget.ConstraintLayout>